# kprect

./: .clang-format  .clang-tidy  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md
src/: binplacement.cpp  binplacement.h  bitmap.cpp  bitmap.h  common.cpp  common.h  main.cpp  palette.cpp  palette.h  rect.cpp  rect.h  rectplacement.cpp  rectplacement.h  rectset.cpp  rectset.h  solverfast.cpp  solverfast.h  solverslow.cpp  solverslow.h
